@@ -1,3 +1,7 @@
+2009-08-09
+- add mouse action : maximize_restore
+- fixed issue 125
+
 2009-07-28
 - some tint2conf code
 
